# FVHOE

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  TODO.md  diff.txt  pyproject.toml  test.ipynb
.github/workflows/: ci.yml
examples/: Untitled.ipynb  advection_1d-Copy1.ipynb  advection_1d.ipynb  advection_2d.ipynb  advection_3d.ipynb  interacting-blast-wave.ipynb  kelvin-helmholtz.ipynb  sedov1d.ipynb  sedov2d.ipynb  sedov3d.ipynb  shu-osher.ipynb  slotted_disk.ipynb  smooth_convergence.ipynb  sod-shock-tube.ipynb  square.ipynb
examples/advection/: advection_1d.ipynb  advection_2d.ipynb  slotted_disk.ipynb  smooth_convergence.ipynb
examples/euler/: compare_romain_toro.ipynb  compare_sd_interacting_blast_waves.ipynb  compare_sd_kelvin_helmholtz_instability.ipynb  compare_sd_shu_osher.ipynb  compare_sd_sod.ipynb  double_mach_reflection.ipynb  (+8 more)
fvhoe/: array_management.py  array_manager.py  array_slice.py  boundary_conditions.py  config.py  fv.py  hydro.py  initial_conditions.py  named_array.py  ode.py  riemann_solvers.py  romain_solver.py  scripting.py  slope_limiting.py  smooth_extrema_detection.py  solver.py  stencils.py  timer.py  visualization.py
tests/: test_ArrayManager.py  test_HydroState.py  test_InitialCondition.py  test_NAD.py  test_a_posteriori_limiting.py  test_advection.py  test_array_manager.py  test_asym.py  test_boundary_condition.py  test_boundary_conditions.py  test_fv.py  test_hydro.py  test_named_array.py  test_passive_scalars.py  test_save_load.py  test_sedov_reflection_symmetry.py  test_utils.py  test_visualization.py  utils.py
(+47 files in other folders)
