[project]
name="fvhoe"
version="0.0.0"
description="High-order finite-volume solver for Euler's equations in 1D, 2D, and 3D."
authors = [
    {name = "Jonathan Palafoutas", email = "jpalafou@princeton.edu"}
]
readme="README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numba",
    "numpy",
    "scipy",
    "tqdm",
]

[project.optional-dependencies]
test=["pytest"]

[tool.setuptools.packages.find]
include = ["fvhoe"]
